Add Entity Framework DbContext.

--- a/ReactAspx/Web.config
+++ b/ReactAspx/Web.config
@@ -12,7 +12,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ReactAspx-20190301030605.mdf;Initial Catalog=aspnet-ReactAspx-20190301030605;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add
       name="DefaultConnection"
-      connectionString="Data Source=.;Initial Catalog=ReactAspx;Integrated Security=SSPI;"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ReactAspx;Integrated Security=SSPI;"
       providerName="System.Data.SqlClient"
     />
   </connectionStrings>
