--- a/ReactAspx/package.json
+++ b/ReactAspx/package.json
@@ -9,13 +9,15 @@
   "author": "Philippe",
   "license": "ISC",
   "dependencies": {
+    "@types/json-parse-better-errors": "^1.0.0",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "awesome-typescript-loader": "^5.2.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "webpack-cli": "^3.2.3"
