--- a/ReactAspx/Web.config
+++ b/ReactAspx/Web.config
@@ -10,11 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ReactAspx-20190301030605.mdf;Initial Catalog=aspnet-ReactAspx-20190301030605;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add
-      name="DefaultConnection"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ReactAspx;Integrated Security=SSPI;"
-      providerName="System.Data.SqlClient"
-    />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ReactAspx;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -58,7 +54,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
