Project using Postgree + ElephantSql.

--- a/ReactAspx/Web.config
+++ b/ReactAspx/Web.config
@@ -5,11 +5,12 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --> 
+  </configSections>
+        
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ReactAspx-20190301030605.mdf;Initial Catalog=aspnet-ReactAspx-20190301030605;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="MyPostgreeConnection" connectionString="Server=isilo.db.elephantsql.com;Port=5432;User Id=ojubkoyq;Password=o3PNZsa1qi1i00hbC4nOcPlV6IRq0NDD;Database=ojubkoyq" providerName="Npgsql" />
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ReactAspx;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -18,6 +19,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <system.data>
+    <DbProviderFactories>
+      <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql" />
+    </DbProviderFactories>
+  </system.data>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
@@ -76,12 +82,17 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
   <system.codedom>
