--- a/ReactAspx/packages.config
+++ b/ReactAspx/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework6.Npgsql" version="3.2.0" targetFramework="net452" />
   <package id="intellisense-net" version="1.0.4" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
@@ -38,7 +39,13 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NodaTime" version="1.3.2" targetFramework="net452" />
   <package id="NodaTime.Serialization.JsonNet" version="1.3.2" targetFramework="net452" />
+  <package id="Npgsql" version="4.0.6" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
