--- a/ReactAspx/ReactAspx.csproj
+++ b/ReactAspx/ReactAspx.csproj
@@ -262,6 +262,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="webpack.config.js" />
+    <None Include="Properties\PublishProfiles\MyRestaurant.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
